--- a/src/app/partials/header/header.component.html
+++ b/src/app/partials/header/header.component.html
@@ -6,7 +6,7 @@
   
       <button class="btn btn-primary ms-1">Get Started</button>
   
-      <div class="collapse navbar-collapse" id="navToggleMenu" style="width: 20%;">
+      <div class="collapse navbar-collapse" id="navToggleMenu" style="width: 20%; color: black">
         <ul class="navbar-nav me-auto nav" id="navbarNav">
           <li class="nav-item"> <a routerLink="homepage" class="nav-link">{{ 'HOME' }}</a></li>
           <li class="nav-item"><a routerLink="about-us" class="nav-link ml-2">{{ 'ABOUT' }}</a></li>
@@ -14,6 +14,7 @@
           <li class="nav-item"><a routerLink="add-appointment" class="nav-link ml-2">{{ 'MAKE APPOINTMENT' }}</a></li>
           <li class="nav-item"><a routerLink="appointment-list" class="nav-link ml-2">{{ 'APPOINTMENT LIST' }}</a></li>
           <li class="nav-item"><a routerLink="doctors-page" class="nav-link ml-2">{{ 'DOCTORS LIST' }}</a></li>
+          <li class="nav-item"><a routerLink="create-doctors" class="nav-link ml-2">{{ 'CREATE DOCTOR' }}</a></li>
           <!-- <li class="nav-item"><a routerLink="edit-page/id" class="nav-link ml-2">{{ 'EDIT PAGE' }}</a></li> -->
 
          
@@ -31,8 +32,4 @@
 
 
   
-<!-- <nav class="navbar navbar-light bg-body-tertiary">
-    <div class="container-fluid">
-      <span class="navbar-brand mb-0 h1"></span>
-    </div>
-</nav> -->
+
