--- a/src/app/pages/doctor-page/doctor-page.component.html
+++ b/src/app/pages/doctor-page/doctor-page.component.html
@@ -5,24 +5,24 @@
       <table class="table table-striped mt-5">
         <thead class="table-dark">
           <tr>
-            <th class="head" [innerHTML]="'ID'"></th>
-            <th class="head" [innerHTML]="'Image'"></th>
-            <th class="head" [innerHTML]="'First Name'"></th>
-            <th class="head" [innerHTML]="'Last Name'"></th>
-            <th class="head" [innerHTML]="'Speciality'"></th>
-            <th class="head" [innerHTML]="'Action'"></th>
+            <th class="head">Image</th>
+            <th class="head">First Name</th>
+            <th class="head">Last Name</th>
+            <th class="head">Speciality</th>
+            <th class="head">Action</th>
           </tr>
         </thead>
         <tbody class="table-group-divider">
           <tr *ngFor="let doctor of doctors">
-            <td>{{ doctor.id }}</td>
-            <td>{{ doctor.image }}</td>
+            <td>
+              {{ doctor.image }}
+            </td>
             <td>{{ doctor.first_name }}</td>
             <td>{{ doctor.last_name }}</td>
             <td>{{ doctor.speciality }}</td>
             <td>
-              <a class="btn btn-success me-2" [routerLink]="['/edit-doctors', doctor.id]">Edit</a> <!-- Add margin right -->
-              <a class="btn btn-danger me-2" (click)="deleteSingleDoctor(doctor.id)">Delete</a> <!-- Add margin right -->
+              <a class="btn btn-success me-2" [routerLink]="['/edit-doctors', doctor.id]">Edit</a>
+              <a class="btn btn-danger me-2" (click)="deleteSingleDoctor(doctor.id)">Delete</a>
             </td>
           </tr>
         </tbody>
