--- a/src/app/partials/header/header.component.html
+++ b/src/app/partials/header/header.component.html
@@ -1,35 +1,56 @@
-<nav class="navbar navbar-light bg-light" data-bs-theme="dark" id="header">
-    <div class="container-fluid" id="navbar">
-      <a class="navbar-brand" href="#">
-        <img src="assets/images/logo-search-grid-1x.png" id="logo" alt="">
-      </a>
-  
-      <button class="btn btn-primary ms-1">Get Started</button>
-  
-      <div class="collapse navbar-collapse" id="navToggleMenu" style="width: 20%; color: black">
-        <ul class="navbar-nav me-auto nav" id="navbarNav">
-          <li class="nav-item"> <a routerLink="homepage" class="nav-link">{{ 'HOME' }}</a></li>
-          <li class="nav-item"><a routerLink="about-us" class="nav-link ml-2">{{ 'ABOUT' }}</a></li>
-          <li class="nav-item"><a routerLink="contact" class="nav-link ml-2">{{ 'CONTACT' }}</a></li>
-          <li class="nav-item"><a routerLink="add-appointment" class="nav-link ml-2">{{ 'MAKE APPOINTMENT' }}</a></li>
-          <li class="nav-item"><a routerLink="appointment-list" class="nav-link ml-2">{{ 'APPOINTMENT LIST' }}</a></li>
-          <li class="nav-item"><a routerLink="doctors-page" class="nav-link ml-2">{{ 'DOCTORS LIST' }}</a></li>
-          <li class="nav-item"><a routerLink="create-doctors" class="nav-link ml-2">{{ 'CREATE DOCTOR' }}</a></li>
-          <!-- <li class="nav-item"><a routerLink="edit-page/id" class="nav-link ml-2">{{ 'EDIT PAGE' }}</a></li> -->
+<nav class="navbar navbar-light bg-light" id="header">
+  <div class="container-fluid" id="navbar">
+    <a class="navbar-brand" href="#">
+      <img src="assets/images/logo-search-grid-1x.png" id="logo" alt="">
+    </a>
 
-         
-        </ul>
-      </div>
-  
-      <button class="btn btn-secondary btn-sm ml-4 navbar-toggle collapsed" id="hamburger-btn"
-        type="button" data-bs-toggle="collapse" aria-expanded="false" data-bs-target="#navToggleMenu">
-        <i class="fa-solid fa-bars"></i>
-      </button>
+    <button class="btn btn-primary ms-1">Get Started</button>
+
+    <div class="collapse navbar-collapse" id="navToggleMenu" style="width: 20%; color: black">
+      <ul class="navbar-nav me-auto nav" id="navbarNav">
+        <li class="nav-item">
+          <a routerLink="homepage" class="nav-link">{{ 'HOME' }}</a>
+        </li>
+        <li class="nav-item">
+          <a routerLink="about-us" class="nav-link ml-2">{{ 'ABOUT' }}</a>
+        </li>
+        <li class="nav-item">
+          <a routerLink="contact" class="nav-link ml-2">{{ 'CONTACT' }}</a>
+        </li>
+        <li class="nav-item">
+          <a routerLink="add-appointment" class="nav-link ml-2">{{ 'MAKE APPOINTMENT' }}</a>
+        </li>
+        <li class="nav-item">
+          <a routerLink="appointment-list" class="nav-link ml-2">{{ 'APPOINTMENT LIST' }}</a>
+        </li>
+        <li class="nav-item">
+          <a routerLink="doctors-page" class="nav-link ml-2">{{ 'DOCTORS LIST' }}</a>
+        </li>
+        <li class="nav-item">
+          <a routerLink="doctors-page2" class="nav-link ml-2">{{ 'DOCTORS PAGE' }}</a>
+        </li>
+        <li class="nav-item">
+          <a routerLink="see-doctors" class="nav-link ml-2">{{ 'SEE DOCTORS PAGE' }}</a>
+        </li>
+        <li class="nav-item">
+          <a routerLink="create-doctors" class="nav-link ml-2">{{ 'CREATE DOCTOR' }}</a>
+        </li>
+        <li class="nav-item">
+          <a routerLink="reschedule-appointment" class="nav-link ml-2">{{ 'RESCHEDULE APPOINTMENT' }}</a>
+        </li>
+
+        <li class="nav-item">
+          <a routerLink="create-reschedule" class="nav-link ml-2">{{ 'CREATE RESCHEDULE' }}</a>
+        </li>
+        
+      </ul>
     </div>
-  </nav>
-  
-  
 
+    <button class="btn btn-secondary btn-sm ml-4 navbar-toggle collapsed" id="hamburger-btn"
+      type="button" data-bs-toggle="collapse" aria-expanded="false" data-bs-target="#navToggleMenu">
+      <i class="fa-solid fa-bars"></i>
+    </button>
+  </div>
+</nav>
 
-  
 
