--- a/src/app/partials/header/header.component.html
+++ b/src/app/partials/header/header.component.html
@@ -43,6 +43,14 @@
           <a routerLink="create-reschedule" class="nav-link ml-2">{{ 'CREATE RESCHEDULE' }}</a>
         </li>
         
+        <li class="nav-item">
+          <a routerLink="feedback" class="nav-link ml-2">{{ 'FEEDBACK' }}</a>
+        </li>
+        
+        <li class="nav-item">
+          <a routerLink="feedback-list" class="nav-link ml-2">{{ 'FEEDBACK LIST' }}</a>
+        </li>
+        
       </ul>
     </div>
 
