--- a/src/app/partials/header/header.component.html
+++ b/src/app/partials/header/header.component.html
@@ -50,6 +50,10 @@
         <li class="nav-item">
           <a routerLink="feedback-list" class="nav-link ml-2">{{ 'FEEDBACK LIST' }}</a>
         </li>
+
+        <li class="nav-item">
+          <a routerLink="doctors-dropdown" class="nav-link ml-2">{{ 'DOCTORS DROPDOWN' }}</a>
+        </li>
         
       </ul>
     </div>
