--- a/src/app/pages/add-appointment/add-appointment.component.html
+++ b/src/app/pages/add-appointment/add-appointment.component.html
@@ -42,7 +42,9 @@
 
     <div class="form-group">
       <label for="doctor_name">Doctor Name</label><br>
-      <input type="text" class="form-control" id="doctor_name" name="doctor_name" ngModel required><br><br>
+      <select class="form-control" id="title" name="title" ngModel required>
+        <option *ngFor="let doctor of doctors" [value]="doctor.id">{{ doctor.first_name }} {{ doctor.last_name }}</option>
+      </select><br><br>
     </div>
 
     <div class="form-group">
