--- a/src/app/pages/edit-doctors/edit-doctors.component.html
+++ b/src/app/pages/edit-doctors/edit-doctors.component.html
@@ -4,23 +4,22 @@
   <form #editDoctorForm="ngForm" (ngSubmit)="updateDoctor(editDoctorForm)">
     <div class="form-group">
       <label for="first_name">First Name</label><br>
-      <input type="text" class="form-control" id="first_name" name="first_name"  ngModel required><br><br>
+      <input type="text" class="form-control" id="first_name" name="first_name" [(ngModel)]="doctorData.first_name" required><br><br>
     </div>
 
     <div class="form-group">
       <label for="last_name">Last Name</label><br>
-      <input type="text" class="form-control" id="last_name" name="last_name" ngModel required><br><br>
+      <input type="text" class="form-control" id="last_name" name="last_name" [(ngModel)]="doctorData.last_name" required><br><br>
     </div>
 
     <div class="form-group">
       <label for="speciality">Speciality</label><br>
-      <input type="text" class="form-control" id="speciality" name="speciality" ngModel required><br><br>
+      <input type="text" class="form-control" id="speciality" name="speciality" [(ngModel)]="doctorData.speciality" required><br><br>
     </div>
 
     <button type="submit" class="btn btn-primary">Save Changes</button>
   </form>
 </div>
-
 
 
   
