--- a/src/app/pages/see-doctors/see-doctors.component.html
+++ b/src/app/pages/see-doctors/see-doctors.component.html
@@ -1,22 +1,24 @@
 <div class="container d-flex flex-column">
     <div style="margin-top: 7rem;">
-      <div *ngIf="doctors.length > 0">
+      <div class="search-container d-flex mb-3">
+        <input type="text" [(ngModel)]="searchTerm" placeholder="Search doctors by name or speciality" class="form-control me-2">
+        <button class="btn btn-primary" (click)="filterDoctors()">Search</button>
+      </div>
+      <div *ngIf="filteredDoctors.length > 0">
         <div class="row mt-5">
-          <div class="col-12 col-md-6 col-lg-4" *ngFor="let doctor of doctors | paginate: { itemsPerPage: 6, currentPage: p }">
+          <div class="col-12 col-md-6 col-lg-4" *ngFor="let doctor of filteredDoctors | paginate: { itemsPerPage: 6, currentPage: p }">
             <div class="card mb-3">
-            
               <img [src]="'http://localhost:8081/uploads/' + doctor.image" class="card-img-top" alt="Doctor Image">
               <div class="card-body">
                 <h5 class="card-title">Dr. {{ doctor.first_name }} {{ doctor.last_name }}</h5>
                 <p class="card-text">Speciality: {{ doctor.speciality }}</p>
-           
               </div>
             </div>
           </div>
         </div>
         <pagination-controls (pageChange)="p = $event"></pagination-controls>
       </div>
-      <ng-template *ngIf="doctors.length === 0">
+      <ng-template *ngIf="filteredDoctors.length === 0">
         <p>No doctor available.</p>
       </ng-template>
     </div>
