--- a/src/app/partials/footer/footer.component.css
+++ b/src/app/partials/footer/footer.component.css
@@ -19,3 +19,22 @@
     margin-left: 2%;
     margin-top: 0.2rem;
 }
+/* .footer {
+    display: none; 
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background-color: #f5f5f5;
+    text-align: center;
+    padding: 5px; 
+    transition: opacity 0.5s ease; 
+  }
+  
+  .footer p {
+    color: white;
+    margin-left: 10%;
+    margin-top: 1rem;
+    font-size: 2vh; 
+  }
+   */
