--- a/src/app/pages/create-reschedule/create-reschedule.component.html
+++ b/src/app/pages/create-reschedule/create-reschedule.component.html
@@ -2,7 +2,7 @@
     
     <div class="form-group">
       <label for="first_name">First Name:</label>
-      <input type="text" class="form-control" id="last_name" name="last_name" ngModel required>
+      <input type="text" class="form-control" id="first_name" name="first_name" ngModel required>
     </div>
     <div class="form-group">
       <label for="last_name">Last Name:</label>
@@ -17,12 +17,12 @@
       <input type="email" class="form-control" id="email" name="email" ngModel required>
     </div>
     <div class="form-group">
-      <label for="original_time">Original Time:</label>
-      <input type="text" class="form-control" id="original_time" name="original_time" ngModel required>
+      <label for="original_time">Original Date:</label>
+      <input type="date" class="form-control" id="original_time" name="original_time" ngModel required>
     </div>
     <div class="form-group">
       <label for="new_time">New Date:</label>
-      <input type="text" class="form-control" id="new_time" name="new_time" ngModel required>
+      <input type="date" class="form-control" id="new_time" name="new_time" ngModel required>
     </div>
     <div class="form-group">
       <label for="reason_for_rescheduling">Reason for Rescheduling:</label>
