--- a/src/app/pages/user-login/user-login.component.html
+++ b/src/app/pages/user-login/user-login.component.html
@@ -1,4 +1,7 @@
 <form #loginForm="ngForm" (ngSubmit)="login(loginForm)" style="margin-top: 7rem;">
+    <!-- <p class="large mt-2 pt-1 text-danger" ngIf="hasError">
+        {{errorMessage}}
+    </p> -->
 
     <!-- Email input -->
     <div data-mdb-input-init class="form-outline mb-4">
