--- a/src/app/pages/create-doctors/create-doctors.component.html
+++ b/src/app/pages/create-doctors/create-doctors.component.html
@@ -4,17 +4,17 @@
     <form (ngSubmit)="onSubmit()">
       <div class="form-group">
         <label for="first_name">First Name</label><br>
-        <input type="text" class="form-control" id="first_name" name="first_name" [(ngModel)]="firstName" required><br><br>
+        <input type="text" class="form-control" id="first_name" name="first_name" ngModel required><br><br>
       </div>
   
       <div class="form-group">
         <label for="last_name">Last Name</label><br>
-        <input type="text" class="form-control" id="last_name" name="last_name" [(ngModel)]="lastName" required><br><br>
+        <input type="text" class="form-control" id="last_name" name="last_name" ngModel required><br><br>
       </div>
   
       <div class="form-group">
         <label for="speciality">Speciality</label><br>
-        <input type="text" class="form-control" id="speciality" name="speciality" [(ngModel)]="speciality" required><br><br>
+        <input type="text" class="form-control" id="speciality" name="speciality" ngModel required><br><br>
       </div>
   
       <button type="submit" class="btn btn-primary">Submit</button>
