--- a/src/app/partials/header/header.component.html
+++ b/src/app/partials/header/header.component.html
@@ -3,14 +3,10 @@
     <a class="navbar-brand" href="#">
       <img src="assets/images/logo-search-grid-1x.png" id="logo" alt="">
     </a>
-
-     <button 
-    class="btn btn-primary ms-1"  
-    [routerLink]="['user-login']"
     
-  >
-    Get Started
-  </button>
+    <a class="btn btn-primary ms-1" [routerLink]="['/user-login']">
+      Get Started
+    </a>
 
     <div class="collapse navbar-collapse" id="navToggleMenu" style="width: 20%; color: black">
       <ul class="navbar-nav me-auto nav" id="navbarNav">
@@ -26,35 +22,20 @@
         <li class="nav-item">
           <a routerLink="add-appointment" class="nav-link ml-2">{{ 'MAKE APPOINTMENT' }}</a>
         </li>
-        <li class="nav-item">
-          <a routerLink="appointment-list" class="nav-link ml-2">{{ 'APPOINTMENT LIST' }}</a>
-        </li>
-        <li class="nav-item">
-          <a routerLink="doctors-page" class="nav-link ml-2">{{ 'DOCTORS LIST' }}</a>
-        </li>
-        <li class="nav-item">
-          <a routerLink="doctors-page2" class="nav-link ml-2">{{ 'DOCTORS PAGE' }}</a>
-        </li>
-        <li class="nav-item">
-          <a routerLink="see-doctors" class="nav-link ml-2">{{ 'SEE DOCTORS PAGE' }}</a>
-        </li>
-        <li class="nav-item">
-          <a routerLink="create-doctors" class="nav-link ml-2">{{ 'CREATE DOCTOR' }}</a>
-        </li>
-        <li class="nav-item">
-          <a routerLink="reschedule-appointment" class="nav-link ml-2">{{ 'RESCHEDULE APPOINTMENT' }}</a>
-        </li>
+        
+
         <li class="nav-item">
           <a routerLink="create-reschedule" class="nav-link ml-2">{{ 'CREATE RESCHEDULE' }}</a>
         </li>
         <li class="nav-item">
-          <a routerLink="feedback" class="nav-link ml-2">{{ 'FEEDBACK' }}</a>
+          <a routerLink="feedback" class="nav-link ml-2">{{ 'LEAVE FEEDBACK' }}</a>
         </li>
+       
+       
+
+        
         <li class="nav-item">
-          <a routerLink="feedback-list" class="nav-link ml-2">{{ 'FEEDBACK LIST' }}</a>
-        </li>
-        <li class="nav-item">
-          <a routerLink="doctors-dropdown" class="nav-link ml-2">{{ 'DOCTORS DROPDOWN' }}</a>
+          <a routerLink="admin-pages" class="nav-link ml-2">{{ 'ADMIN PAGES' }}</a>
         </li>
       </ul>
     </div>
