--- a/src/app/partials/header/header.component.html
+++ b/src/app/partials/header/header.component.html
@@ -4,9 +4,9 @@
       <img src="assets/images/logo-search-grid-1x.png" id="logo" alt="">
     </a>
     
-    <a class="btn btn-primary ms-1" [routerLink]="['/user-login']">
+    <!-- <a class="btn btn-primary ms-1" [routerLink]="['/user-login']">
       Get Started
-    </a>
+    </a> -->
 
     <div class="collapse navbar-collapse" id="navToggleMenu" style="width: 20%; color: black">
       <ul class="navbar-nav me-auto nav" id="navbarNav">
@@ -20,7 +20,7 @@
           <a routerLink="contact" class="nav-link ml-2">{{ 'CONTACT' }}</a>
         </li>
            <li class="nav-item">
-          <a routerLink="userpages" class="nav-link ml-2">{{ 'USER' }}</a>
+          <a routerLink="userpages" class="nav-link ml-2">{{ 'USER PAGES' }}</a>
         </li>
        
        
